# rice-cooker

./: .gitignore  CLAUDE.md  LICENSE  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
backend/: Cargo.toml  catalog.toml
backend/catalog/: minecraft.toml
backend/docs/: install-design.md
backend/docs/issues/: interactive-installs.md
backend/polkit/: so.butterfly.ricecooker.policy
backend/scripts/: test-catalog.sh  visual-screenshot-rices.sh  visual-verify-only.sh
backend/src/: apply.rs  cache.rs  catalog.rs  deps.rs  detect.rs  entry.rs  events.rs  git.rs  journal.rs  lib.rs  lock.rs  main.rs  paths.rs  proc_info.rs  process.rs
backend/src/install/: aur.rs  autostart.rs  diff.rs  env.rs  helper.rs  mod.rs  pacman.rs  pipeline.rs  record.rs  run.rs  snapshot.rs  symlink.rs  systemd.rs
backend/tests/: apply_e2e.rs  cli.rs  install_e2e.rs
backend/tests/common/: mod.rs
backend/tests/snapshots/: cli__list_json.snap
electron/main/: index.ts
electron/preload/: index.ts
packaging/aur/rice-cooker/: .SRCINFO  PKGBUILD  rice-cooker.desktop  rice-cooker.sh
packaging/aur/rice-cooker-backend-git/: .SRCINFO  PKGBUILD
rice-cooker-helper/: Cargo.toml  README.md
rice-cooker-helper/polkit/: so.butterfly.ricecooker.policy
rice-cooker-helper/src/: main.rs
src/: App.tsx  global.d.ts  main.tsx
src/pages/pick-a-rice/: PickARice.module.css  PickARice.tsx  menuOptions.ts  riceScreenshots.ts  (+2 more)
src/shared/: backend.ts
src/styles/: global.css  tokens.css
src/types/: scroll-snap.d.ts
(+65 files in other folders)
