[package]
name = "rice-cooker-backend"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "rice-cooker-backend"
path = "src/main.rs"

[lib]
name = "rice_cooker_backend"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
fs4 = "0.13"
jwalk = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "serde-human-readable"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
